Adicionei aba tenis e mais algumas alterações

--- a/index.html
+++ b/index.html
@@ -7,24 +7,49 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <div class="m-6 justify-center">
+<body class="bg-blue-100">
+    <div class="m-6">
         <div class="flex justify-center">
             <img src="grizzlies.png" alt="Logo" class="h-48 mb-6">
         </div>
 
         <div>
-            <p class="text-gray-800 text-xl text-shadow-sm"> 
-                Welcome to the official online store of the Memphis Grizzlies, your ultimate destination for all things Grizzlies! Whether you're a die-hard fan, a basketball enthusiast, or simply looking to represent your favorite NBA team, we've got you covered. Step into our virtual arena and explore an extensive collection of authentic Grizzlies merchandise, from jerseys and apparel to accessories and memorabilia.
+            <p class="text-gray-800 text-xl text-shadow-sm justify flex justify-center mb-12"> 
+                Welcome to the official online store of the Memphis Grizzlies, your ultimate destination<br> for all things Grizzlies! Whether you're a die-hard fan, a basketball enthusiast, or simply looking <br> to represent your favorite NBA team, we've got you covered. <br>Step into our virtual arena and explore an extensive collection of authentic Grizzlies merchandise, <br>from jerseys and apparel to accessories and memorabilia.
             </p>
         </div>
 
-        <div>
+        
+        <div class="flex justify-center">
+            <div>
             <a href="bones.html">
-                <img src="bones.png" alt="Aba de Bonés" class="h-40>
+                <img src="bones.png" alt="Aba de Bonés" class="h-44 mb-4">
             </a>
+            </div>
+        </div>
+        <div class="flex justify-center">
+            <div class="p-auto inline-block bg-blue-400 w-40 rounded-lg text-3xl">
+                <a href="bones.html" >
+                    <h1 class="flex justify-center inline-block">Bonés</h1>
+                </a>
+            </div>
         </div>
 
+        <div class="flex justify-center">
+            <div>
+            <a href="tenis.html">
+                <img src="tenis.png" alt="Aba de Bonés" class="h-44 mt-12 mb-4">
+            </a>
+            </div>
+        </div>
+
+        <div class="flex justify-center">
+            <div class="p-auto inline-block bg-blue-400 w-40 rounded-lg text-3xl">
+                <a href="tenis.html" >
+                    <h1 class="flex justify-center inline-block">Tênis</h1>
+                </a>
+            </div>
+        </div>
 
     </div>
 </body>
